--- a/src/App.css
+++ b/src/App.css
@@ -174,6 +174,7 @@ p {
 }
 
 @media (max-width: 26em) {
+  /* 416px */
   .nav-bar img {
     width: 7rem;
   }
@@ -212,9 +213,9 @@ p {
     padding: 2rem 1.5rem;
   }
   .heading {
-    font-size: 2rem;
+    font-size: 1.8rem;
   }
   .info {
-    font-size: 1.8rem;
+    font-size: 1.7rem;
   }
 }
