Removed unused image files and updated image sources to webp format

--- a/src/Hero/Hero.css
+++ b/src/Hero/Hero.css
@@ -1,5 +1,5 @@
 header {
-  background-image: url("./Crowd-Praying.jpg");
+  background-image: url("Crowd-Praying.webp");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: bottom;
